--- a/composer.json
+++ b/composer.json
@@ -9,30 +9,20 @@
     }
   ],
   "type": "magento-module",
+  "require": {
+    "Ffuenf/Ffuenf_Common": "*"
+  },
   "require-dev": {
-    "phpunit/phpunit": "4.*"
+    "aoepeople/composer-installers": "*"
   },
   "repositories": [
     {
       "type": "composer",
       "url": "http://packages.firegento.com"
+    },
+    {
+      "type": "vcs",
+      "url": "https://github.com/ffuenf/Ffuenf_Common"
     }
-  ],
-  "extra": {
-    "magento-root-dir": "./magento/",
-    "map": [
-      [
-        "app/code/community/Ffuenf/CouponCodeCleaner",
-        "app/code/community/Ffuenf/CouponCodeCleaner"
-      ],
-      [
-        "app/etc/modules/Ffuenf_CouponCodeCleaner.xml",
-        "app/etc/modules/Ffuenf_CouponCodeCleaner.xml"
-      ],
-      [
-        "shell/ffuenf_couponcodecleaner.php",
-        "shell/ffuenf_couponcodecleaner.php"
-      ]
-    ]
-  }
+  ]
 }
